Test
Implementación de test y corrección de errores
