# swagger-output.json
@@ -58,8 +58,8 @@
         ],
         "description": "Endpoint para guardar pelicula",
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -82,13 +82,13 @@
                   "nombre": {
                     "example": "any"
                   },
-                  "lanzamiento": {
+                  "listaID": {
+                    "example": "any"
+                  },
+                  "anio": {
                     "example": "any"
                   },
                   "url": {
-                    "example": "any"
-                  },
-                  "listaID": {
                     "example": "any"
                   }
                 }
@@ -294,10 +294,10 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "nombre": {
+                  "usuarioID": {
                     "example": "any"
                   },
-                  "usuarioID": {
+                  "nombre": {
                     "example": "any"
                   }
                 }
@@ -337,6 +337,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
